[package]
name = "pogo"
version = "0.1.0"
authors = ["Jeb Brooks <robojeb@gmail.com>"]
edition = "2018"
license = "MIT"

description = "A library for providing online PGO for simple functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "pogo_attr"
]

[dependencies]
libloading = "0.6.5"
once_cell = "1.5.2"
parking_lot = "0.11.0"
crossbeam = "0.8.0"
chashmap = "2.2.2"
pogo_attr = "0.0.1"