[package]
name = "pogo_attr"
version = "0.0.1"
authors = ["Jeb Brooks <robojeb@gmail.com>"]
edition = "2018"

license = "MIT"
description = "Attribute macro for the POGO online optimization library"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
